# document-scanner

./: CMakeLists.txt  README.md  abstractpapersheetdetector.cpp  abstractpapersheetdetector.h  abstractquaddetector.cpp  abstractquaddetector.h  documentscanner.cpp  documentscanner.h  ithreshpapersheetdetector.cpp  ithreshpapersheetdetector.h  main.cpp  savaldopapersheetdetector.cpp  savaldopapersheetdetector.h  submission.cpp
